--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -12,3 +12,17 @@ spec:
       port: 80
       targetPort: 3000
 
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: explore-california-service
+  namespace: development
+spec:
+  type: LoadBalancer
+  selector:
+    app: explorecalifornia.com
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 8085
