--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -57,9 +57,9 @@ metadata:
   namespace: development
   labels:
     app: explorecalifornia.com
-  name: explorecalifornia.com
+  name: explore-california-deployment
 spec:
-  replicas: 3
+  replicas: 2
   selector:
     matchLabels:
       app: explorecalifornia.com
