--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   creationTimestamp: null
-  name: explorecalifornia.com
+  name: explorecalifornia
 spec:
   rules:
     - host: explorecalifornia.com
