--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -83,7 +83,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: jenkins
-  namespace: devops-tools
+  namespace: development
 spec:
   replicas: 1
   selector:
