--- a/k8s/serviceAccount.yaml
+++ b/k8s/serviceAccount.yaml
@@ -3,6 +3,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: jenkins-admin
+  namespace: development
 rules:
   - apiGroups: [""]
     resources: ["*"]
@@ -12,12 +13,13 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: jenkins-admin
-  namespace: devops-tools
+  namespace: development
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: jenkins-admin
+  namespace: development
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
