--- a/k8s/volume.yaml
+++ b/k8s/volume.yaml
@@ -2,6 +2,7 @@ apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
   name: local-storage
+  namespace: development
 provisioner: kubernetes.io/no-provisioner
 volumeBindingMode: WaitForFirstConsumer
 ---
@@ -9,13 +10,14 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: jenkins-pv-volume
+  namespace: development
   labels:
     type: local
 spec:
   storageClassName: local-storage
   claimRef:
     name: jenkins-pv-claim
-    namespace: devops-tools
+    namespace: development
   capacity:
     storage: 10Gi
   accessModes:
@@ -35,7 +37,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: jenkins-pv-claim
-  namespace: devops-tools
+  namespace: development
 spec:
   storageClassName: local-storage
   accessModes:
