--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -26,3 +26,22 @@ spec:
     - protocol: TCP
       port: 80
       targetPort: 8085
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: jenkins-service
+  namespace: development
+  annotations:
+    prometheus.io/scrape: 'true'
+    prometheus.io/path:   /
+    prometheus.io/port:   '8080'
+spec:
+  selector:
+    app: jenkins-server
+  type: NodePort
+  ports:
+    - port: 8080
+      targetPort: 8080
+      nodePort: 32000
