volume binding mode

--- a/k8s/volume.yaml
+++ b/k8s/volume.yaml
@@ -4,7 +4,7 @@ metadata:
   name: local-storage
   namespace: development
 provisioner: kubernetes.io/no-provisioner
-volumeBindingMode: WaitForFirstConsumer
+volumeBindingMode: Immediate
 ---
 apiVersion: v1
 kind: PersistentVolume
